[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simba"
dynamic = ["version"]
description = "Roomba dynamics and environment simulator"
readme = "README.md"
requires-python = ">=3.10.13"


[tool.hatch.version]
path = "simba/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/simba",
]